// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spreadObjectKeys utility does not modify input 1`] = `
Object {
  "input": Object {
    "foo.bar.baz": "value",
  },
  "output": Object {
    "foo": Object {
      "bar": Object {
        "baz": "value",
      },
    },
  },
}
`;

exports[`spreadObjectKeys utility handles custom output value formatting 1`] = `
Object {
  "user": Object {
    "age": 42,
    "name": "Joe",
    "phoneNumber": "07987654321",
  },
}
`;

exports[`spreadObjectKeys utility skips keys with undefined values 1`] = `
Object {
  "user": Object {
    "name": "Joe",
  },
}
`;
